Updated print output of some values and ref var errors now produce a message.